[project]
name = "domabot"
version = "0.1.0"
description = "ÙTelegram bot for Doma"
requires-python = ">=3.12"
dependencies = [
    "dnspython==2.8.0",
    "google-generativeai==0.8.5",
    "polib==1.2.0",
    "pymongo==4.14.1",
    "pytest==8.4.2",
    "python-dotenv==1.1.1",
    "requests>=2.32.5",
    "telethon==1.41.2",
]
